package ar.edu.uba.fi;

public class EstadoDebilitado extends EstadoNormal {
    @Override
    public void chocar(Pacman pacman) {
        // Hacer nada
    }
}
