package ar.edu.uba.fi;

public interface EstadoFantasma {

    EstadoPacman chocar(Pacman pacman);
}
