package ar.edu.uba.fi;

public class EstadoNormal {
    public void chocar(Pacman pacman) {
        pacman.matar();
    }
}
