package ar.edu.uba.fi;

public interface EstadoPacman {

    EstadoPacman comer(Pinky f);
}
