@startuml
Title: Modelo del pacman


class Pacman {
        -vivo Boolean

        Pacman()

        comer(f Pinky) Pinky
        comer(p Pellet pellet)
        matar()
}

Pacman .. Pellet
Pacman .. Pinky
Pacman .....> PacmanSinVida : <<instanciate>>
Pacman *- EstadoPacman

interface EstadoPacman {
    comer(f Pinky) EstadoPacman
}

EstadoPacman <|.. PacmanMuerto
EstadoPacman <|.. PacmanVivo

class Pinky {
        debilitar()
        chocar(pacman Pacman )
}

interface EstadoFantasma {
        chocar(pacman Pacman) EstadoPacman
}
EstadoFantasma <|.. EstadoNormal
EstadoFantasma <|.. EstadoDebilitado

class EstadoNormal {
        chocar(pacman Pacman) EstadoPacman
}

class EstadoDebilitado {
        chocar(pacman Pacman) EstadoPacman
}

Pinky *- EstadoFantasma

class Pellet {
        debilitarFantasmas()
}
Pellet o- Pinky

class PacmanSinVida

@enduml
